# dance_initiation_teachers_pairing

./: Readme.md  pyproject.toml
Python/src/data/: dancer.py
Python/src/entry_points/: teachers_pairing.py
Python/src/enumerations/: dancer_level.py
Python/src/resolver/: assign_dates.py  balance_performances.py  generate_tuples.py  match_begginers.py  resolver.py
Python/tests/real_cases/: june.py  may.py
Python/tests/resolver/: test_resolver.py
